--- a/springBootMongo.yml
+++ b/springBootMongo.yml
@@ -24,7 +24,7 @@ spec:
         app: springboot
     spec:
       containers:
-      - image: benadabankah/springapp
+      - image: benadabankah/spring-boot-mongo
         name: springboot
         ports:
         - containerPort: 8080  
